--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -23,6 +23,7 @@
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{ITR}{ITR}{information transfer rate}
 \newacronym{CPU}{CPU}{central processing unit}
+\newacronym{GUI}{GUI}{graphical user interface}
 
 % Glossary
 
