--- a/thesis/tex/results.tex
+++ b/thesis/tex/results.tex
@@ -1,2 +1,26 @@
 
 \chapter{Results}
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{|c|c|c|c|c|}\hline
+Trial ID	& Target detection 	& Accuracy (\%)		& ITR (bits/min)	& \\
+			& time (sec)		&					&					& \\\hline
+1			& 3.00				& 95.00				& 32.69				& \\\hline
+2			& 2.86				& 90.48				& 29.30				& \\\hline
+3			& 2.86				& 80.95				& 20.91				& \\\hline
+4			& 2.86				& 80.95				& 20.91				& \\\hline
+5			& 2.73				& 95.45 			& 36.55				& \\\hline
+6			& 2.73				& 90.91				& 31.16				& \\\hline
+7			& 2.73				& 90.91				& 31.16				& \\\hline
+8 			& 2.73	 			& 81.82 			& 22.61 			& \\\hline
+9 			& 2.40 				& 88.00 			& 32.01 			& \\\hline
+10 			& 2.40 				& 80.00 			& 24.03 			& \\\hline
+11 			& 2.31				& 84.62 			& 29.56 			& \\\hline
+12 			& 2.22 				& 81.48 			& 27.41 			& \\\hline
+13 			& 2.14 				& 75.00				& 22.19 			& \\\hline
+Average:	& $2.61\pm 0.28$ 	& $85.81\pm 6.39$	& $27.73\pm 5.12$	& \\\hline
+	\end{tabular}
+	\caption{Results of 13 trials of testing the application.}
+	\label{tab:results}
+\end{table}
