--- a/thesis/tex/conclusion.tex
+++ b/thesis/tex/conclusion.tex
@@ -3,7 +3,7 @@
 
 The aim of this thesis has been to describe an \gls{SSVEP}-based \gls{BCI} implemented as a practical part of this thesis. In the first chapter the biological background was discussed to understand how brain activity can be measured and a low-cost \gls{EEG} device called Emotiv EPOC was chosen for recording the brain activity.
 
-The second chapter provided and overview of the mathematical and technological background. Widely used \gls{feature extraction} methods called \gls{PSDA} and \gls{CCA} were discussed in this chapter along with signal processing techniques. All the discussed \gls{feature extraction} methods and signal processing techniques were used in the implemented application.
+The second chapter provided an overview of the mathematical and technological background. Widely used \gls{feature extraction} methods called \gls{PSDA} and \gls{CCA} were discussed in this chapter along with signal processing techniques. All the discussed \gls{feature extraction} methods and signal processing techniques were used in the implemented application.
 
 Finally, the third chapter described the implemented application itself. The strengths of the application compared to the existing applications are that this application is open-source, it allows different options for signal pipeline to be easily tested and it combines different \gls{SSVEP} \gls{feature extraction} methods. Although there are hybrid \glspl{BCI} that use different neuromechanisms and therefore these \glspl{BCI} use different \gls{feature extraction} methods, to the best of the author's knowledge there are no \glspl{BCI} that use different \gls{feature extraction} methods with one neuromechanism, in this case \gls{SSVEP}.
 
